1998-10-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment. Swarm 1.3.1 released.

	* Arguments.m ([Arguments -_getSwarmHome_:], [Arguments
	-getSwarmHome]): New method takes code of getSwarmHome, except it
	calls returns findSwarm if argument is set.
	([Arguments -_getPath_:subpath:]): Use ignoringEnvFlag to
	get the SWARMHOME recognized by _runningFromInstall_.

	* Arguments.h (Arguments): New ivar ignoringEnvFlag.

	* swarm_rts_routines.[hm] (skip_offset, skip_type_qualifiers): 
	Don't inline, this causes gratuitious warning messages from egcs.

1998-09-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.[hm], objectbase.h ([Arguments
	+createArgc:Argv:version:bugAddress:]): Added version:bugAddress:.

1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ActivityControl.h (ActivityControl): Make status of type
	id <Symbol>.

1998-09-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Add char support.  Add
	workaround for bugs in libffi for shorts (like chars).

	* objectbase.h (val_t): Add _short and _ushort.

	* VarProbe.m ([VarProbe -createEnd]): Add short and unsigned short.
	Use variable to hold type tag.
	([VarProbe -probeAsPointer:]): Add char, unsigned char, short and
	unsigned short.
	([VarProbe -probeAsInt:]): Add short and unsigned short.
	([VarProbe -probeAsString:Buffer:withFullPrecision:]): Likewise.
	([VarProbe -setData:To:]): Likewise.
	([VarProbe -setData:ToString:]): Likewise.

	* MessageProbe.m ([MessageProbe -setArg:ToString:]): Add short
	and unsigned short.  Unsigned int was improperly tagged a int.
	(dynamicCallOn): Add char, short, and unsigned short types (all
	cases).
	([MessageProbe -doubleDynamicCallOn:]): Add char, short, and unsigned
	short types.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h (val_t): Add _uint, _ulong, and _long.

	* VarProbe.m ([VarProbe -createEnd]): Add support for long
	and unsigned long.