@@ -1,3 +1,10 @@
+1998-10-10  Marcus G. Daniels  <mgd@sangre.santafe.edu>
+
+	* Arguments.m (dropDirectory): Remove.
+	(findDirectory, countSlashes, findSwarm, [Arguments
+	-_runningFromInstall_]): Use dropdir (from misc) instead of
+	dropDirectory.
+
 1998-10-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.am (CURRENT, AGE): Increment. Swarm 1.3.1 released.
